--- a/App/package.json
+++ b/App/package.json
@@ -22,11 +22,13 @@
     "react-native": "0.76.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.2.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
