--- a/App/package.json
+++ b/App/package.json
@@ -10,31 +10,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/bottom-tabs": "^7.0.7",
-    "@react-navigation/native": "^7.0.4",
-    "@react-navigation/stack": "^7.0.6",
-    "axios": "^1.7.7",
-    "expo": "~52.0.9",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.8",
+    "expo": "~52.0.14",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
