--- a/App/package.json
+++ b/App/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.8",
+    "babel": "^6.23.0",
     "expo": "~52.0.14",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
